# KarlDBot

./: Análise de regressão.md  README.md  cli.py  climate_report.md  pyproject.toml
examples/: climate.yaml  correlation.yaml  regression.yaml
karldbot/: __init__.py  cli.py
karldbot/agents/: __init__.py  analyst.py  base.py  koder.py  reviewer.py  tester.py  visualizer.py
karldbot/brain/: __init__.py  report.py
karldbot/environment/: __init__.py  core.py  problem.py
karldbot/llm/: __init__.py  interface.py  prompts.py
karldbot/models/: __init__.py  actions.py  config.py  messages.py  state.py
karldbot/orchestration/: __init__.py  coordinator.py
karldbot/report/: __init__.py  generator.py
karldbot/rle/: __init__.py  agents.py  environment.py
tests/integration/: test_workflow.py
tests/karldbot/brain/: test_brain.py  test_report.py
tests/karldbot/rle/: test_environment.py
tests/unit/agents/: test_base_agent.py
tests/unit/environment/: test_environment.py
tests/unit/models/: test_models.py
