[project]
name = "karldbot"
version = "0.1.0"
description = "Karl the coder."
authors = [
    {name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.5,<0.7.0",
    "pydantic>=2.9.2,<3.0.0",
    "duckdb>=1.1.0,<2.0.0",
    "pandas>=2.2.2,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "fire>=0.6.0,<0.7.0",
    "pyaml>=24.7.0,<25.0.0",
    "tqdm>=4.66.5,<5.0.0",
    "matplotlib>=3.9.2,<4.0.0",
    "loguru>=0.7.2,<0.8.0",
    "tabulate>=0.9.0,<0.10.0",
    "base-ai-agent @ git+https://github.com/Deeplearn-PeD/base-ai-agent.git"
]

[project.scripts]
karl = "karldbot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-ruff>=0.4.1,<0.5.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
